--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Build generated
-build/
-DerivedData/
+_Store
+*/build/*
+*.pbxuser
+DerivedData
 
 ## Various settings
 *.pbxuser
@@ -21,6 +23,10 @@ xcuserdata/
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
+
+## Profile
+profile
+Podfile.lock
 
 ## Obj-C/Swift specific
 *.hmap
